--- a/styles/base.css
+++ b/styles/base.css
@@ -37,12 +37,12 @@
 
  main {
 
-     max-width: 1200px;
+     max-width: 1400px;
      max-height: 700px;
      margin: 0 auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
-     border: 2px solid rgb(110, 110, 110);
+
      margin-top: 20px;
 
  }
@@ -62,6 +62,11 @@
      font-family: arial;
      border-radius: 5px;
      border: 2px solid black;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+
+
 
 
 
