--- a/styles/base.css
+++ b/styles/base.css
@@ -1,9 +1,18 @@
+ /* basic body styling */
+
+ body {
+     display: flex;
+     flex-direction: column;
+
+ }
+
  /* header section */
 
  header h1 {
 
-     background-image: linear-gradient(to bottom right, rgba(3, 4, 75, 0.384), rgba(4, 0, 255, 0.329));
+     background-image: linear-gradient(to bottom right, rgba(202, 160, 45, 0.384), rgba(168, 29, 29, 0.329));
      padding: 20px;
+     gap: 0;
 
 
  }
@@ -11,7 +20,7 @@
  .navigation-menu {
      display: flex;
      flex-direction: row;
-     background-color: rgba(14, 13, 13, 0.884);
+     background-color: rgba(0, 22, 94, 0.884);
      max-height: 300px;
      gap: 20px;
      justify-content: center;
@@ -78,6 +87,14 @@
      width: 20%;
  }
 
+ .title {
+
+     max-width: 100%;
+     background-color: rgba(137, 43, 226, 0.562);
+     align-self: stretch;
+     margin-bottom: 15px;
+ }
+
 
  .content {
 
@@ -85,6 +102,7 @@
      text-align: justify;
      margin-right: 20px;
      margin-left: 20px;
+     margin-bottom: 10px;
  }
 
 
@@ -92,9 +110,10 @@
 
  footer {
 
-     margin-top: 20px;
+     margin-top: 50px;
      background-image: linear-gradient(to bottom right, rgb(3, 75, 71), rgba(4, 0, 255, 0.829));
      padding: 10px;
+
 
  }
 
