--- a/styles/base.css
+++ b/styles/base.css
@@ -10,7 +10,7 @@
 
  header h1 {
 
-     background-color: #88a1e6;
+     background-color: #6285e6;
      padding: 20px;
      gap: 0;
      margin-bottom: 0;
