--- a/styles/base.css
+++ b/styles/base.css
@@ -95,6 +95,7 @@
      display: flex;
      flex-direction: column;
      align-items: center;
+     background-color: var(--white);
 
 
 
@@ -108,6 +109,7 @@
      width: 20%;
      margin-top: 20px;
      margin-bottom: 20px;
+     border-radius: 5px;
 
  }
 
