--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -1,5 +1,5 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header,
@@ -7,8 +7,24 @@ main,
 footer {
     min-width: 640px;
     margin: 1rem auto;
-    border: 1px solid rgba(0, 19, 128, 0.623);
+    border: 1px solid rgba(21, 49, 209, 0.623);
+    padding: 10px;
+    background-color: rgba(0, 0, 255, 0.747);
+    color: white;
+
+}
+
+main {
+
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
 
 
+}
 
+section {
+    padding: 20px;
+    background-color: rgb(215, 220, 250);
+    color: black;
 }
