--- a/temples-large.css
+++ b/temples-large.css
@@ -17,8 +17,13 @@ h1 {
 }
 
 
-
 /* nav menu styling */
+
+nav {
+    background-color: var(--green);
+
+}
+
 .menu {
     display: flex;
     flex-direction: row;
@@ -26,7 +31,8 @@ h1 {
     gap: 20px;
     padding: 15px;
     font-family: 'lato', sans-serif;
-    background-color: var(--green);
+
+
 
 }
 
@@ -56,6 +62,7 @@ h1 {
 
 figure img {
     max-width: 250px;
+    border-radius: 5px;
 
 }
 
@@ -63,6 +70,7 @@ figcaption {
     font-family: 'Rowdies', sans-serif;
     text-align: center;
     margin-top: 10px;
+    color: var(--dark);
 }
 
 /* footer */
