--- a/temples.css
+++ b/temples.css
@@ -44,7 +44,7 @@
         max-width: 760px;
         display: flex;
         flex-direction: column;
-        background-color: var(--green);
+        background-color: rgb(44, 59, 41);
         position: relative;
         padding: 0;
         margin: 0;
@@ -54,7 +54,6 @@
 
 
     }
-
 
 
     .menu li {
