--- a/temples-large.css
+++ b/temples-large.css
@@ -58,10 +58,12 @@ nav {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-flow: row dense;
+    text-align: center;
 }
 
 figure img {
     max-width: 250px;
+    height: 150px;
     border-radius: 5px;
 
 }
