adding lazy loading and some styles

--- a/week04/styles/filtered-temples-large.css
+++ b/week04/styles/filtered-temples-large.css
@@ -88,6 +88,16 @@ figcaption {
     color: var(--dark);
 }
 
+/* cards styling */
+
+figure {
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+
+}
+
+
 /* footer */
 
 footer {
