--- a/week04/styles/filtered-temples-large.css
+++ b/week04/styles/filtered-temples-large.css
@@ -72,12 +72,20 @@ nav {
     grid-template-columns: repeat(4, 1fr);
     grid-auto-flow: row dense;
     text-align: center;
+    gap: 20px;
+    align-items: end;
+
+
+
 }
 
 figure img {
-    max-width: 250px;
-    height: 150px;
+
+    width: clamp(280px, 100%, 300px);
+    height: 210px;
     border-radius: 5px;
+    object-fit: cover;
+
 
 }
 
@@ -93,10 +101,19 @@ figcaption {
 figure {
 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+    width: clamp(280px, 100%, 300px);
+    min-height: 400px;
+
+
 
 }
 
+figcaption,
+p {
+    min-height: 30px;
+    margin: 5px 0;
+
+}
 
 /* footer */
 
