--- a/week04/styles/filtered-temples-large.css
+++ b/week04/styles/filtered-temples-large.css
@@ -101,7 +101,7 @@ figcaption {
 figure {
     display: flex;
     flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 10px 15px 2px rgba(6, 31, 13, 0.521);
     width: clamp(280px, 100%, 300px);
     height: clamp (380px, 400px, 420px);
     padding: 1px;
