css changes for activity week04

--- a/week04/styles/filtered-temples-large.css
+++ b/week04/styles/filtered-temples-large.css
@@ -105,6 +105,7 @@ figure {
     width: clamp(280px, 100%, 300px);
     height: clamp (380px, 400px, 420px);
     padding: 1px;
+    background-color: rgba(250, 235, 215, 0.438);
 
 
 
