some changes before submission

--- a/week04/styles/filtered-temples-large.css
+++ b/week04/styles/filtered-temples-large.css
@@ -135,3 +135,13 @@ footer {
     color: white;
     text-align: center;
 }
+
+/* styling elements with Event Listener JavaScript */
+
+#temples-old,
+#temples-new,
+#temples-large,
+#temples-small {
+
+    cursor: pointer;
+}
