--- a/week04/styles/filtered-temples-large.css
+++ b/week04/styles/filtered-temples-large.css
@@ -94,6 +94,7 @@ figcaption {
     text-align: center;
     margin-top: 10px;
     color: var(--dark);
+
 }
 
 /* cards styling */
@@ -103,10 +104,10 @@ figure {
     flex-direction: column;
     box-shadow: 2px 10px 15px 2px rgba(6, 31, 13, 0.521);
     width: clamp(280px, 100%, 300px);
-    height: clamp (380px, 400px, 420px);
-    padding: 1px;
-    background-color: rgba(250, 235, 215, 0.438);
 
+
+    background-color: rgba(250, 235, 215, 0.438);
+    border-radius: 5px;
 
 
 }
