--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -12,9 +12,14 @@ h1 {
 h1,
 h2 {
     color: var(--red);
+    font-family: 'Outfit', sans-serif;
 
 }
 
 ul {
     list-style-type: none;
+}
+
+p {
+    font-family: 'Noto Sans', sans-serif;
 }
