--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -3,6 +3,8 @@
     --orange: #DB3100;
     --yellow: #DE942C;
     --red: #DC2130;
+    --blue: rgb(26, 26, 131);
+
 }
 
 a {
@@ -17,6 +19,11 @@ h1,
 h2 {
     color: var(--red);
     font-family: 'Outfit', sans-serif;
+
+}
+
+h3 {
+    color: var(--blue);
 
 }
 
@@ -43,4 +50,18 @@ header {
 
 #red {
     color: var(--red);
+}
+
+
+.content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+ul li::marker {
+
+    content: "✅";
+    color: var(var(--orange));
+    font-size: 1, 5rem;
 }
