--- a/form.css
+++ b/form.css
@@ -15,7 +15,7 @@ html {
 /*----------- BODY --------------*/
 body {
     font-size: 16px;
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
@@ -101,10 +101,11 @@ footer {
 
 .review-form label {
     display: block;
-    padding-top: 1rem;
+    padding-top: 0.05rem;
     color: #333333;
     font-size: 0.9rem;
     margin-bottom: 0;
+
 
 }
 
@@ -199,24 +200,43 @@ footer {
     display: flex;
     flex-direction: row;
     gap: 30px;
-    margin-left: 10px;
+    margin-left: 0;
+
 
 }
 
 .stars-container label {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     gap: 2px;
-
     cursor: pointer;
 }
 
-.rating-title {
-    margin: 0;
+.rating {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+
 }
 
-.rating {
-    margin: 0;
-    gap: 4px;
+/* desktop view */
+
+
+@media screen and (min-width:1200px) {
+
+    header,
+    header h1 {
+        max-width: 600px;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    form {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+
 }
