--- a/project/project.css
+++ b/project/project.css
@@ -110,6 +110,11 @@ h2 {
         background-color: var(--green);
         max-height: 100px;
         position: absolute;
+        right: 0;
+        margin-right: 30px;
+        margin-top: 60px;
+
+
 
 
 
@@ -123,11 +128,13 @@ h2 {
         display: flex;
         flex-direction: column;
         background-color: whitesmoke;
-        position: relative;
+
         padding: 0;
         margin: 0;
         opacity: 1;
-        left: -10;
+        padding: 10px;
+        border-bottom-right-radius: 6px;
+
 
 
 
@@ -157,7 +164,7 @@ h2 {
     .menu a:hover,
     .menu a:active {
         color: white;
-        background-color: black;
+        background-color: var(--orange);
         padding: 10px;
     }
 
