advancing with some js css changes

--- a/project/project.css
+++ b/project/project.css
@@ -34,6 +34,7 @@ h2 {
     color: var(--red);
     padding-top: 10px;
     font-family: 'Outfit', sans-serif;
+    text-align: center;
 
 
 }
@@ -258,11 +259,147 @@ footer {
 
     .hero-image img {
         width: 100%;
-        max-height: 300px;
+
 
     }
 
 
+    /*----tours section main page ------ */
+
+    .tours-container {
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+
+    }
+
+
+
+
+    .card-container {
+        width: clamp(230px, 80%, 920px);
+        display: flex;
+        overflow: hidden;
+        flex-direction: column;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        position: relative;
+
+    }
+
+    .card-container h1 {
+
+        margin-bottom: 1.5rem;
+        font-size: 1.5rem;
+    }
+
+    .img {
+        position: relative;
+        transition: transform 0.5s ease;
+        z-index: 2;
+
+    }
+
+    .img img {
+        width: 100%;
+        height: auto;
+        display: block;
+        border-radius: 10px 10px 0 0;
+        background-color: var(--orange);
+    }
+
+
+    .card-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        padding: 1rem;
+        background: var(--orange);
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        pointer-events: none;
+    }
+
+    .card-content h2 {
+        color: white;
+    }
+
+    .tittle {
+        font-size: 1.25rem;
+        margin: 0 0 0.5rem;
+
+
+
+    }
+
+    .description {
+        font-size: 0.95rem;
+        color: var(--blue);
+        margin: 0 0 1rem;
+        flex: 1;
+    }
+
+
+    .card-content a {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        align-self: flex-start;
+        transition: color 0.2s ease;
+        top: 70%;
+
+
+
+    }
+
+
+
+    .card-content>* {
+        position: absolute;
+        transition: 0.5s;
+        left: 100%;
+        pointer-events: auto;
+    }
+
+    .card-container:hover .card-content>* {
+        left: 0;
+        margin: 0.3rem 0.8rem;
+
+    }
+
+    .card-content .title {
+        color: white;
+
+        top: 6%;
+
+    }
+
+    .card-content .description {
+        top: 33%;
+        color: white;
+        font-size: larger;
+
+    }
+
+    .card-content a:hover {
+        color: var(--red);
+    }
+
+    .card-container:hover .img {
+
+        transform: translateX(400px);
+    }
+
+    .card-container:hover {
+
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
+
+    }
 }
 
 /* --------- Desktop ---------------- */
