--- a/project/project.css
+++ b/project/project.css
@@ -149,6 +149,17 @@ main h1 {
 
 footer {
     background-color: var(--yellow);
+    text-align: center;
+
+}
+
+footer .resources {
+    padding: 20px;
+}
+
+footer p {
+    padding: 10px;
+    color: var(--blue);
 }
 
 
@@ -173,6 +184,65 @@ footer {
     margin-right: 20px;
     border-radius: 50%;
 }
+
+
+/* --------form ----------*/
+fieldset {
+    margin: 2rem 0;
+    border: solid 1px #ddd;
+    border-radius: 6px;
+    padding: .5rem 2%;
+}
+
+
+fieldset label {
+    display: block;
+    padding-top: 1rem;
+    color: var(--blue);
+    font-size: 0.9rem;
+
+}
+
+label input[type="text"],
+
+label input[type="email"],
+label input[type="cel"],
+label input[type="date"],
+fieldset select,
+label input[type="number"] {
+    background-color: #eee;
+    display: block;
+    border: 1px solid #3d48ac38;
+    border-radius: 6px;
+    padding: 0.75rem;
+    color: grey;
+    width: 100%;
+    max-width: 400px;
+    appearance: none;
+
+}
+
+
+
+.contact-us input[type="submit"] {
+
+    border: none;
+    background-image: linear-gradient(rgb(255, 102, 0), rgba(173, 13, 34, 0.829));
+    color: #fff;
+    border-radius: 6px;
+    padding: 0.8rem;
+    width: 96%;
+    max-width: 400px;
+    margin: -1rem 2% 2rem 2%;
+    box-shadow: 1px 1px 4px #999;
+    font-size: larger;
+}
+
+.contact-us input:required {
+    border-right: solid 8px var(--orange);
+}
+
+
 
 /* --------  Mobile ------------- */
 
@@ -586,11 +656,23 @@ footer {
         justify-content: center;
     }
 
-    /* ----footer ----- */
+    .contact-form-section {
+        display: grid;
+        justify-items: center;
 
+
+    }
+
+    form {
+        width: 450px;
+    }
+
+    /* ----footer ----- */
     .social-media img {
         width: 25px;
         height: auto;
+        margin: 5px;
+
     }
 
 
