--- a/project/project.css
+++ b/project/project.css
@@ -244,6 +244,39 @@ label input[type="number"] {
 }
 
 
+/*----------Day Trips ----------------------*/
+
+.day-trips {
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: center;
+    margin-bottom: 50px;
+
+}
+
+.trip-container {
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 300px;
+    height: 400px;
+    background-color: var(--yellow);
+
+}
+
+.trip-container img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.trip-image-container p {
+
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
 /* --------  Mobile ------------- */
 
