--- a/project/project.css
+++ b/project/project.css
@@ -319,11 +319,26 @@ label input[type="number"] {
 
 /* ---------Inca Trail ------------ */
 
-.main-pic img {
 
-    width: 800px;
+.gallery {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
 
-    margin: 0 auto;
+}
+
+.gallery .main-pic {
+    align-items: center;
+
+}
+
+.gallery .main-pic img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 7px;
+
 }
 
 .tour-description-wrapper {
@@ -694,6 +709,14 @@ label input[type="number"] {
     .about p {
         width: 250px;
         text-align: center;
+    }
+
+    /* -----inca-trail --------- */
+
+    .gallery {
+        flex-direction: column;
+        align-items: center;
+
     }
 }
 
